03-argocd-apps/manifests/mlflow-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mlflow-gateway
  name: mlflow-gateway-modeport
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    nodePort: 31000
  selector:
    app: mlflow-gateway
  type: NodePort
