03-argocd-apps/manifests/mlflow-gateway/mlflow-app-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-gateway-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP  
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.0"    
spec:
  rules:
    - host: mlflow-gateway.rtarf-ml.its-software-services.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow-gateway
                port:
                  number: 5000
